crates/tlang_parser/tests/snapshots/parser_generics__generic_function_single_bound.snap
---
source: crates/tlang_parser/tests/parser_generics.rs
expression: "parse!\n(indoc::indoc!\n{\"\n        fn sort<T: Ord>(list: List<T>) -> List<T> { list }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 15,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 14,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "sort",
                span: Span(
                  start: 3,
                  end: 7,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 7,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 7,
            ),
          ),
        ),
        type_params: [
          TypeParam(
            id: 5,
            name: Ident(
              name: "T",
              span: Span(
                start: 8,
                end: 9,
                start_lc: LineColumn(
                  line: 0,
                  column: 8,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 9,
                ),
              ),
            ),
            bounds: [
              Ty(
                id: 4,
                kind: Path(Path(
                  segments: [
                    Ident(
                      name: "Ord",
                      span: Span(
                        start: 11,
                        end: 14,
                        start_lc: LineColumn(
                          line: 0,
                          column: 11,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                      ),
                    ),
                  ],
                  res: Unresolved,
                  span: Span(
                    start: 11,
                    end: 14,
                    start_lc: LineColumn(
                      line: 0,
                      column: 11,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 14,
                    ),
                  ),
                )),
                parameters: [],
                span: Span(
                  start: 11,
                  end: 14,
                  start_lc: LineColumn(
                    line: 0,
                    column: 11,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 14,
                  ),
                ),
              ),
            ],
            span: Span(
              start: 8,
              end: 14,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 14,
              ),
            ),
          ),
        ],
        parameters: [
          FunctionParameter(
            pattern: Pat(
              id: 6,
              kind: Identifier(Ident(
                name: "list",
                span: Span(
                  start: 16,
                  end: 20,
                  start_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 20,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 16,
                end: 20,
                start_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 20,
                ),
              ),
            ),
            type_annotation: Some(Ty(
              id: 8,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "List",
                    span: Span(
                      start: 22,
                      end: 26,
                      start_lc: LineColumn(
                        line: 0,
                        column: 22,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 26,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 22,
                  end: 26,
                  start_lc: LineColumn(
                    line: 0,
                    column: 22,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 26,
                  ),
                ),
              )),
              parameters: [
                Ty(
                  id: 7,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "T",
                        span: Span(
                          start: 27,
                          end: 28,
                          start_lc: LineColumn(
                            line: 0,
                            column: 27,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 28,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 27,
                      end: 28,
                      start_lc: LineColumn(
                        line: 0,
                        column: 27,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 28,
                      ),
                    ),
                  )),
                  parameters: [],
                  span: Span(
                    start: 27,
                    end: 28,
                    start_lc: LineColumn(
                      line: 0,
                      column: 27,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 28,
                    ),
                  ),
                ),
              ],
              span: Span(
                start: 22,
                end: 29,
                start_lc: LineColumn(
                  line: 0,
                  column: 22,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 29,
                ),
              ),
            )),
            span: Span(
              start: 16,
              end: 29,
              start_lc: LineColumn(
                line: 0,
                column: 16,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 29,
              ),
            ),
          ),
        ],
        params_span: Span(
          start: 15,
          end: 30,
          start_lc: LineColumn(
            line: 0,
            column: 15,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 30,
          ),
        ),
        guard: None,
        return_type_annotation: Some(Ty(
          id: 10,
          kind: Path(Path(
            segments: [
              Ident(
                name: "List",
                span: Span(
                  start: 34,
                  end: 38,
                  start_lc: LineColumn(
                    line: 0,
                    column: 34,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 38,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 34,
              end: 38,
              start_lc: LineColumn(
                line: 0,
                column: 34,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 38,
              ),
            ),
          )),
          parameters: [
            Ty(
              id: 9,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "T",
                    span: Span(
                      start: 39,
                      end: 40,
                      start_lc: LineColumn(
                        line: 0,
                        column: 39,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 40,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 39,
                  end: 40,
                  start_lc: LineColumn(
                    line: 0,
                    column: 39,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 40,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 39,
                end: 40,
                start_lc: LineColumn(
                  line: 0,
                  column: 39,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 40,
                ),
              ),
            ),
          ],
          span: Span(
            start: 34,
            end: 41,
            start_lc: LineColumn(
              line: 0,
              column: 34,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 41,
            ),
          ),
        )),
        body: Block(
          id: 13,
          statements: [],
          expression: Some(Expr(
            id: 12,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "list",
                  span: Span(
                    start: 44,
                    end: 48,
                    start_lc: LineColumn(
                      line: 0,
                      column: 44,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 48,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 44,
                end: 48,
                start_lc: LineColumn(
                  line: 0,
                  column: 44,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 48,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 44,
              end: 48,
              start_lc: LineColumn(
                line: 0,
                column: 44,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 48,
              ),
            ),
          )),
          span: Span(
            start: 42,
            end: 50,
            start_lc: LineColumn(
              line: 0,
              column: 42,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 50,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 50,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 50,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 50,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 50,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 50,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 50,
    ),
  ),
)
